v1.26: full-repo adversarial review — 6 defect classes fixed, 14 patterns added
Independent adversarial review of all 16 reference files against
docs/reference-authoring-standards.md (R1-R10, F1-F6), each correction
verified against primary sources before being applied.

RED-severity fixes (wrong diagnosis / no-op fix):
- Elixir assign_async "stale closure" pattern described a mechanism
  that cannot occur in Elixir; its own prescribed fix was a no-op.
  Rewritten around the real bug (out-of-order async completion),
  confirmed against benchmark case EL-008's ground-truth evaluator.
- React Native: false "Hermes strips console.log" claim, and a
  Reanimated crash-masking mechanism misattributed to JSC vs Hermes
  (actual cause: remote JS debugging).
- Invented CLI tool (react-native-community-releases) removed.
- Two unsourced "research-backed" statistics in world-methods.md and
  SKILL.md Phase 2F reworded without fabricated precision.
- Windows packaging: a described onefile "extraction race" cannot
  occur (extraction is synchronous); rewritten around the two real
  mechanisms (AV/SmartScreen scan latency, per-child _MEIPASS).

~20 YELLOW fixes: wrong JDK/PHP/Laravel version history, a dotnet
routing-table row pointing at the wrong pattern, 3 routing-table gaps,
an overstated Kafka exactly-once claim, 18 patterns invisible to the
standard's own audit grep (wrong heading level), README/CLAUDE.md
frozen at v1.12-era stats.

14 new patterns from established language/framework semantics:
BigDecimal scale-equality, JPA entity HashSet corruption, PHP
foreach-by-reference alias, Elixir config.exs vs runtime.exs, React
Context value-identity re-renders, GraphQL N+1, gRPC deadline
propagation, transactional outbox, multiprocessing.freeze_support(),
SmartScreen distribution blocking, deterministic replay debugging.

Full defect list in CHANGELOG.md [1.26]. VERSION and SKILL.md bumped
to 1.26; dist/ rebuild follows in a separate release commit per repo
convention.

Co-Autho